Refactor sensor keys to use snake_case format for consistency across sensor.py, strings.json, and translations/en.json.

--- a/custom_components/sporet/translations/en.json
+++ b/custom_components/sporet/translations/en.json
@@ -37,13 +37,13 @@
   },
   "entity": {
     "sensor": {
-      "preppedTime": {
+      "prepped_time": {
         "name": "Prepped Time"
       },
-      "prepSymbol": {
+      "prep_symbol": {
         "name": "Prep Symbol"
       },
-      "warningText": {
+      "warning_text": {
         "name": "Warning Text"
       }
     }
