chore: update translations and version string

--- a/custom_components/sporet/translations/nb.json
+++ b/custom_components/sporet/translations/nb.json
@@ -20,7 +20,7 @@
     },
     "config_subentries": {
         "slope": {
-            "title": "Løyper og strekninger",
+            "entry_type": "Løyper og strekninger",
             "step": {
                 "user": {
                     "title": "Legg til løype",
